--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       shell: msys2 {0}
       run: |
         g++ -Ofast -Wall -shared -std=c++20 -static -o api.dll api.cpp -lgdi32
-        g++ -Ofast -Wall -shared -std=c++20 -static -o gui.dll gui.cpp -lgdi32
+        g++ -Ofast -Wall -shared -std=c++20 -static -o gui.dll gui.cpp -lgdi32 -lcomctl32
         ls -l api.dll
         ls -l gui.dll
 
