Install `mingw-w64-x86_64-libasan` with gcc`

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       uses: msys2/setup-msys2@v2
       with:
         update: true
-        install: mingw-w64-x86_64-gcc
+        install: mingw-w64-x86_64-gcc, mingw-w64-x86_64-libasan
 
     - name: Compile to .dll
       shell: msys2 {0}
