Debugging by removing `update()`

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,13 +22,13 @@ jobs:
       uses: msys2/setup-msys2@v2
       with:
         update: true
-        install: mingw-w64-x86_64-gcc mingw-w64-x86_64-libasan
+        install: mingw-w64-x86_64-gcc
 
     - name: Compile to .dll
       shell: msys2 {0}
       run: |
-        g++ -Ofast -Wall -fsanitize=address -g -shared -std=c++20 -static -o src/dlls/api.dll src/api.cpp -lgdi32
-        g++ -Ofast -Wall -fsanitize=address -g -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp -lgdi32 -lcomctl32
+        g++ -Ofast -Wall -shared -std=c++20 -static -o src/dlls/api.dll src/api.cpp -lgdi32
+        g++ -Ofast -Wall -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp -lgdi32 -lcomctl32
         ls -l src/dlls/api.dll
         ls -l src/dlls/gui.dll
 
