--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,14 +25,13 @@ jobs:
         install: |
           mingw-w64-x86_64-gcc
           mingw-w64-x86_64-boost
-          mingw-w64-x86_64-qt5
           mingw-w64-x86_64-raylib
 
     - name: Compile to .dll
       shell: msys2 {0}
       run: |
-        g++ -Ofast -Wall -shared -std=c++20 -static -o src/dlls/api.dll src/api.cpp src/settings.cpp -lgdi32 -lQt5Widgets -lQt5Gui -lQt5Core
-        g++ -Ofast -Wall -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp -lgdi32 -lcomctl32 -lQt5Widgets -lQt5Gui -lQt5Core
+        g++ -Ofast -Wall -shared -std=c++20 -static -o src/dlls/api.dll src/api.cpp src/settings.cpp -lgdi32 -lraylib
+        g++ -Ofast -Wall -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp -lgdi32 -lcomctl32 -lraylib
         ls -l src/dlls/api.dll
         ls -l src/dlls/gui.dll
 
