Move update rate to settings

--- a/settings.conf
+++ b/settings.conf
@@ -1,4 +1,10 @@
 # DieKnow settings configuration
 
+# Refresh interval for window closing
 interval=1
+
+# If internet should be toggled when monitoring is toggled
 internet_toggler=true
+
+# Refresh rate of application
+update=500
