Code refactoring into switch statement

--- a/settings.conf
+++ b/settings.conf
@@ -4,7 +4,7 @@
 interval=1
 
 # If internet should be toggled when monitoring is toggled
-internet_toggler=true
+internet_toggler=false
 
 # Refresh rate of application
 update=500
