--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,2 +1,2 @@
 set noparent
-filter=-whitespace/parens, -build/include_subdir, -build/include_what_you_use, -build/heaer_guard, -build/c++17
+filter=-whitespace/parens, -build/include_subdir, -build/include_what_you_use, -build/header_guard, -build/c++17
