--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       shell: msys2 {0}
       run: |
         g++ -O2 -Wall -shared -std=c++20 -static -o src/dlls/api.dll src/api.cpp src/settings.cpp -lgdi32
-        g++ -O2 -Wall -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp -lgdi32 -lcomctl32
+        g++ -O2 -Wall -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp src/settings.cpp src/system.cpp src/api.cpp -lgdi32 -lcomctl32
         ls -l src/dlls/api.dll
         ls -l src/dlls/gui.dll
 
