--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,2 @@
 [MESSAGES CONTROL]
-disable=too-many-branches, too-many-locals, unnecessary-semicolon, consider-using-f-string
+disable=too-many-branches, too-many-locals, unnecessary-semicolon, consider-using-f-string, invalid-name
