--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,13 +24,13 @@ jobs:
         update: true
         install: |
           mingw-w64-x86_64-gcc
-          mingw-w64-x86_64-boost
+          # mingw-w64-x86_64-boost
 
     - name: Compile to .dll
       shell: msys2 {0}
       run: |
         g++ -O2 -Wextra -shared -std=c++20 -static -o src/dlls/api.dll src/api.cpp src/settings.cpp -lgdi32 -lwininet
-        g++ -O2 -Wextra -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp src/settings.cpp src/system.cpp src/api.cpp -lgdi32 -lwininet -lcomctl32
+        g++ -O2 -Wextra -Wcast-function-type -Wmissing-field-initializers -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp src/settings.cpp src/system.cpp src/api.cpp -lgdi32 -lwininet -lcomctl32
         ls -l src/dlls/api.dll
         ls -l src/dlls/gui.dll
 
