Reduce depth when fetching from GitHub

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 1
 
     - name: Restore MSYS2 package cache
       uses: actions/cache@v3
