--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -17,3 +17,15 @@ jobs:
         run: |
           py src/dieknow.py -docs
           echo "Generated documentation"
+          
+      - name: Commit and push .dll file
+        run: |
+          git config --global user.name "Ethan Chan"
+          git config --global user.email "esamuelchan@gmail.com"
+          git add . -f
+          git commit -m "Auto-build DLL files using g++" || echo "No changes to commit"
+          git push https://$GH_PAT@github.com/eschan145/DieKnow.git main
+        env:
+          # A GitHub PAT must be set up as an Actions secret in the repository
+          GH_PAT: ${{ secrets.GH_PAT }}
+        
