--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,12 @@
 name: Build C++ utility
 
-on: [push]
+on:
+  push:
+    paths:
+      - 'src/**/*.cpp'
+  pull_request:
+    paths:
+      - 'src/**/*.cpp'
 
 jobs:
   build:
