--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,23 +10,25 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-gcc:
+  checkout:
     runs-on: windows-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
+  build-msvc:
+    runs-on: windows-latest
+    needs: checkout
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 1
-
     - name: Compile and build source files
       shell: cmd
       run: |
-        g++ --version
-        g++ -O2 -Wextra -shared -std=c++20 -Wmissing-field-initializers -static -o src/dlls/api.dll src/api.cpp src/settings.cpp src/asteroids.cpp -lgdi32 -lwininet
-        g++ -O2 -Wextra -Wcast-function-type -Wmissing-field-initializers -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp src/settings.cpp src/asteroids.cpp src/system.cpp src/api.cpp -lgdi32 -lwininet -lcomctl32
-        ls -l src/dlls/api.dll
-        ls -l src/dlls/gui.dll
+        cl
+        cl /O2 /W4 /D_USRDLL /D_WINDLL /shared /EHsc /MD /Fe:src\dlls\api.dll src/api.cpp src/settings.cpp src/asteroids.cpp gdi32.lib wininet.lib
+        cl /O2 /W4 /D_USRDLL /D_WINDLL /shared /EHsc /MD /Fe:src\dlls\gui.dll src/gui.cpp src/settings.cpp src/asteroids.cpp src/system.cpp src/api.cpp gdi32.lib wininet.lib comctl32.lib
 
     - name: Build docs
       shell: cmd
@@ -34,7 +36,7 @@ jobs:
         py src/dieknow.py -docs
         echo "Generated documentation"     
 
-    - name: Commit and push .dll file
+    - name: Commit and push .dll files
       run: |
         git config --global user.name "Ethan Chan"
         git config --global user.email "esamuelchan@gmail.com"
@@ -45,30 +47,37 @@ jobs:
         # A GitHub PAT must be set up as an Actions secret in the repository
         GH_PAT: ${{ secrets.GH_PAT }}
 
-    - name: Save MSYS2 package cache
-      uses: actions/cache@v3
-      with:
-        path: |
-          C:\msys64\var\cache\pacman\pkg
-          C:\msys64\var\lib\pacman\sync
-        key: msys2-pkgs-${{ runner.os }}-${{ hashFiles('src/api.cpp') }}
-        restore-keys: |
-          msys2-pkgs-${{ runner.os }}-
+  build-gcc:
+    runs-on: windows-latest
+    needs: checkout
+
+    steps:
+    - name: Compile and build source files
+      shell: cmd
+      run: |
+        g++ --version
+        g++ -O2 -Wextra -shared -std=c++20 -Wmissing-field-initializers -static -o src/dlls/api.dll src/api.cpp src/settings.cpp src/asteroids.cpp -lgdi32 -lwininet
+        g++ -O2 -Wextra -Wcast-function-type -Wmissing-field-initializers -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp src/settings.cpp src/asteroids.cpp src/system.cpp src/api.cpp -lgdi32 -lwininet -lcomctl32
 
   build-clang:
     runs-on: windows-latest
+    needs: checkout
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 1
-
     - name: Compile and build source files
       shell: cmd
       run: |
         clang++ --version
         clang++ -O2 -Wextra -shared -std=c++20 -Wmissing-field-initializers -static -o src/dlls/api.dll src/api.cpp src/settings.cpp src/asteroids.cpp -lgdi32 -lwininet
         clang++ -O2 -Wextra -Wcast-function-type -Wmissing-field-initializers -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp src/settings.cpp src/asteroids.cpp src/system.cpp src/api.cpp -lgdi32 -lwininet -lcomctl32
-        ls -l src/dlls/api.dll
-        ls -l src/dlls/gui.dll
+
+  list-files:
+    needs: [build-msvc, build-gcc, build-clang]
+    runs-on: windows-latest
+
+    steps:
+      - name: Verify DLLs are built
+        shell: cmd
+        run: |
+          ls -l src/dlls/api.dll
+          ls -l src/dlls/gui.dll
