Build on yaml modification

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'src/**/*.cpp'
+      - '.github/workflows/*.yml'
   pull_request:
     paths:
       - 'src/**/*.cpp'
