--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,8 +44,8 @@ jobs:
       shell: cmd
       run: |
         cl
-        cl /std:c++20 /O2 /W4 /LD /EHsc /MT /Fe:src\dlls\api.dll src/api.cpp src/settings.cpp src/asteroids.cpp /link user32.lib shell32.lib gdi32.lib wininet.lib
-        cl /std:c++20 /O2 /W4 /LD /EHsc /MT /Fe:src\dlls\gui.dll src/gui.cpp src/settings.cpp src/asteroids.cpp src/system.cpp src/api.cpp /link advapi32.lib user32.lib shell32.lib gdi32.lib wininet.lib comctl32.lib
+        cl /std:c++20 /O2 /W4 /LD /EHsc /DLL /MT /Fe:src\dlls\api.dll src/api.cpp src/settings.cpp src/asteroids.cpp /link user32.lib shell32.lib gdi32.lib wininet.lib
+        cl /std:c++20 /O2 /W4 /LD /EHsc /DLL /MT /Fe:src\dlls\gui.dll src/gui.cpp src/settings.cpp src/asteroids.cpp src/system.cpp src/api.cpp /link advapi32.lib user32.lib shell32.lib gdi32.lib wininet.lib comctl32.lib
 
     - name: Build docs
       shell: cmd
