--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Compile and build source files
       shell: cmd
       run: |
-        dir
+        rm -rf src/dlls/*
         g++ --version
         g++ -O2 -Wextra -shared -std=c++20 -Wmissing-field-initializers -static -o src/dlls/api.dll src/api.cpp src/settings.cpp src/asteroids.cpp -lgdi32 -lwininet
         g++ -O2 -Wextra -Wcast-function-type -Wmissing-field-initializers -shared -std=c++20 -static -o src/dlls/gui.dll src/gui.cpp src/settings.cpp src/asteroids.cpp src/system.cpp src/api.cpp -lgdi32 -lwininet -lcomctl32
@@ -102,6 +102,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
+
       - name: Build docs
         shell: cmd
         run: |
@@ -113,6 +114,11 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
       - name: Use ls to check DLLs
         shell: cmd
         run: |
