--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,6 +109,17 @@ jobs:
           py src/dieknow.py -docs
           echo "Generated documentation"
 
+      - name: Commit and push generated documentation files
+        run: |
+          git config --global user.name "Ethan Chan"
+          git config --global user.email "esamuelchan@gmail.com"
+          git add . -f
+          git commit -m "Automated documentation update" || echo "No changes to commit"
+          git push https://$GH_PAT@github.com/eschan145/DieKnow.git main
+        env:
+          # A GitHub PAT must be set up as an Actions secret in the repository
+          GH_PAT: ${{ secrets.GH_PAT }}
+
   verify-libraries:
     needs: [build-msvc, build-gcc, build-clang]
     runs-on: windows-latest
